[package]
name = "staking-db-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "staking_db_migration"
path = "src/lib.rs"

[dependencies]
staking-db-entity = { path = "../staking-db-entity" }
sea-orm-cli = { version = "0.11.2", default-features = false, features = ["runtime-tokio-rustls"] }
sea-orm-migration = "0.11.2"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1.0.160", features = ["derive"] }
