[package]
name = "staking-solana-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bincode = "1.3.3"
borsh = "0.9.3"
bs58 = "0.4.0"
chrono = "0.4.23"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
solana-client = "1.15.0"
solana-program = "1.15.0"
solana-sdk = "1.15.0"
solana-transaction-status = "1.15.0"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
staking-db-entity = { path = "../staking-db-entity" }
uint = "0.9.5"

[dev-dependencies]
tokio = "1.25.0"
